fixed alignment/sizing on navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
+.articleContainer {
+    width: 100%;
+    padding-right: 0px;
+    padding-left: 0px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 .captionSize {
     font-size: 24px;
 }
@@ -65,28 +73,24 @@ body {
 
 @media screen and (max-width: 768px) {
     #styling {
-        background-color: green;
         margin-left: 100px;
     }
 }
 
 @media screen and (max-width: 992px) {
     #styling {
-        background-color: yellow;
         margin-left: 200px;
     }
 }
 
 @media screen and (max-width: 576px) {
     #styling {
-        background-color: blue;
         margin-left: 50px;
     }
 }
 
 @media screen and (max-width: 1200px) {
     #styling {
-        background-color: orange;
         margin-left: 300px;
     }
 }
